@@ -40,6 +40,7 @@ NEWS
   * Handle only HEAD, GET and POST in mod_dirlisting (same as in staticfile) (#1687)
   * fixed mod_secdownload problem with unsigned time_t (#1688)
   * handle EAGAIN and EINTR for freebsd sendfile (#1675)
+  * Use filedescriptor 0 for mod_scgi spawn socket, redirect STDERR to /dev/null (#1716)
 
 - 1.4.19 - 2008-03-10
 
